# durable-hitl-agents

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DEMO_GUIDE.md  HOW_IT_WORKS.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  run.sh
agent_fleet/: _activity_tool.py  _demo_model.py  activities.py  agents.py  config.py  dispatch_gate.py  langgraph_agents.py  locations.py  mock_activities.py  models.py  queues.py  server.py  simulation.py  worker.py  workflows.py
agent_fleet/mock/: __init__.py  activities.py  worker.py
frontend/: index.html
tests/: conftest.py  test_activities.py  test_simulation.py  test_workflows.py
