[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-fleet-demo"
version = "0.1.0"
description = "Multi-agent drone fleet demo using Google ADK and Temporal"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "temporalio",
    "google-adk>=1.27.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_fleet*"]
