[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "meltdown-demo"
version = "0.1.0"
description = "Meltdown: ice cream delivery fleet demo with ADK multi-agent reasoning + Temporal durable execution"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "temporalio[google-adk]",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["UP042"]

[tool.ruff.lint.per-file-ignores]
"agent_fleet/server.py" = ["E402"]  # load_dotenv() must run before local imports

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_fleet*"]
